--- a/OpenWorkoutTracker Watch App.entitlements
+++ b/OpenWorkoutTracker Watch App.entitlements
@@ -10,7 +10,7 @@
 	<true/>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.com.mjs-software.OpenWorkoutTracker</string>
+		<string>iCloud.com.schwoerb</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
@@ -18,11 +18,11 @@
 	</array>
 	<key>com.apple.developer.ubiquity-container-identifiers</key>
 	<array>
-		<string>iCloud.com.mjs-software.OpenWorkoutTracker</string>
+		<string>iCloud.com.schwoerb</string>
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.mjs-software.OpenWorkoutTracker</string>
+		<string>group.schwoerb.OpenWorkoutTracker</string>
 	</array>
 </dict>
 </plist>
