--- a/OpenWorkoutTracker.entitlements
+++ b/OpenWorkoutTracker.entitlements
@@ -24,7 +24,7 @@
 	<false/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.mjs-software.OpenWorkoutTracker</string>
+		<string>group.schwoerb</string>
 	</array>
 </dict>
 </plist>
